--- a/package.json
+++ b/package.json
@@ -1,19 +1,20 @@
 {
-  "name": "tauri-app",
+  "name": "et-launcher",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.1.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "tauri": "tauri"
   },
   "dependencies": {
-    "@tauri-apps/api": "^2.4.1"
+    "@tauri-apps/api": "^1"
   },
   "devDependencies": {
-    "@tauri-apps/cli": "^2.4.1",
-    "typescript": "~5.7.2",
-    "vite": "^6.2.0"
+    "@tauri-apps/cli": "^1",
+    "vite": "^6.0.3",
+    "typescript": "~5.6.2"
   }
 }
