Update Github action Added native window launcher which is not working Updated command launcher to use mlterm Added settings file Corrected toggle console behavior Added refresh after mode change and addressed app timeouts Refactored UI Added gridsquare calculation Test radio notes

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -10,7 +10,8 @@
 		  "tauri-apps.tauri-vscode",
 		  "esbenp.prettier-vscode",
 		  "lfs.vscode-emacs-friendly",
-		  "ms-azuretools.vscode-docker"
+		  "ms-azuretools.vscode-docker",
+		  "ktiays.aicursor"
 		]
 	  }
 	},
