--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,7 @@ name: 'main'
 on:
   push:
     branches:
-      - dev
+      - tauri-1
 
 
 jobs:
@@ -26,17 +26,10 @@ jobs:
         with:
           node-version: lts/*
 
-      - name: install Rust stable
-        uses: dtolnay/rust-toolchain@stable
-        with:
-          # Those targets are only used on macos runners so it's in an `if` to slightly speed up windows and linux builds.
-          targets: ${{ matrix.platform == 'macos-latest' && 'aarch64-apple-darwin,x86_64-apple-darwin' || '' }}
-
       - name: install dependencies (ubuntu only)
-        if: matrix.platform == 'ubuntu-20.04' # This must match the platform value defined above.
         run: |
           sudo apt-get update
-          sudo apt-get install -y libwebkit2gtk-4.0-dev libwebkit2gtk-4.1-dev libappindicator3-dev librsvg2-dev patchelf
+          sudo apt-get install -y libwebkit2gtk-4.0-dev libayatana-appindicator3-dev librsvg2-dev patchelf libxdo-dev libssl-dev dbus-x11 libcanberra-gtk3-module
         # webkitgtk 4.0 is for Tauri v1 - webkitgtk 4.1 is for Tauri v2.
         # You can remove the one that doesn't apply to your app to speed up the workflow a bit.
       - name: Install pnpm
@@ -45,21 +38,12 @@ jobs:
           version: latest
 
       - name: install frontend dependencies
-        run: pnpm install  --no-frozen-lockfile # change this to npm, pnpm or bun depending on which one you use.
+        run: npm install  --no-frozen-lockfile # change this to npm, pnpm or bun depending on which one you use.
 
       - name: Generate release tag (Unix)
-        if: runner.os != 'Windows'
         id: generate_tag_unix
         run: echo "TAG=${GITHUB_RUN_NUMBER}-${GITHUB_SHA::7}" >> $GITHUB_OUTPUT
         shell: bash
-
-      - name: Generate release tag (Windows)
-        if: runner.os == 'Windows'
-        id: generate_tag_windows
-        run: |
-          $tag = "${env:GITHUB_RUN_NUMBER}-$($env:GITHUB_SHA.Substring(0,7))"
-          echo "TAG=$tag" >> $env:GITHUB_OUTPUT
-        shell: pwsh
 
       - uses: tauri-apps/tauri-action@v0
         env:
