--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,10 +39,9 @@ jobs:
           version: latest
 
       - name: install frontend dependencies
-        run: pnpm install  --no-frozen-lockfile # change this to npm, pnpm or bun depending on which one you use.
+        run: npm install  --no-frozen-lockfile # change this to npm, pnpm or bun depending on which one you use.
 
       - name: Generate release tag (Unix)
-        if: runner.os != 'Windows'
         id: generate_tag_unix
         run: echo "TAG=${GITHUB_RUN_NUMBER}-${GITHUB_SHA::7}" >> $GITHUB_OUTPUT
         shell: bash
